--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Solid App</title>
+    <title>Bill to Friends.</title>
+    <meta
+      name="description"
+      content="친구들과 놀다 보면 편의상 한 사람이 결제하고 나중에 나누어 내고는 합니다.
+      하지만 낸 사람이 잊어버리고, 나중 가면 얼마를 받아야 하는지 기억조차 나지
+      않는 경우가 많았죠. 그 불편함을 도비에몽이 해결해 드립니다."
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
